Temp fix for infoboxes overflowing in sidebar

--- a/frontend/src/styles/Sidebar.css
+++ b/frontend/src/styles/Sidebar.css
@@ -10,6 +10,7 @@
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.351);
     box-sizing: border-box;
     border-radius: 1.2rem;
+    overflow-y: auto;
 }
 
 .Sidebar h1 {
